# autogen

./: pyproject.toml  sweep.yaml
website/: sidebars.js
