[metadata]
license_file = "LICENSE"
description-file = "README.md"


[tool.pytest.ini_options]
addopts = 'new_addopts'
markers = [
    "new_marker"
]

[tool.black]
# https://github.com/psf/black
line-length = new_line_length
exclude = "new_exclude"


[tool.ruff]
line-length = new_line_length
# Enable Pyflakes `E` and `F` codes by default.
select = [
    "new_select"
]
ignore = [
    "new_ignore"
]
# Exclude a variety of commonly ignored directories.
exclude = [
    "new_exclude"
]
ignore-init-module-imports = new_ignore_init_module_imports
unfixable = ["new_unfixable"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = new_max_complexity
